Fixed pixel blurring

--- a/ld42/styles/flood.css
+++ b/ld42/styles/flood.css
@@ -162,6 +162,7 @@ body.moving .ui {
 .splash img {
 	width: 2em;
 	height: 2em;
+	image-rendering: pixelated;
 }
 .splash h1 {
 	font-size: 300%;
